# peter-alert

./: README.md  dev.itsjamie9494.Albania.json  dev.itsjamie9494.AlbanianVirus.json  dev.itsjamie9494.PeterAlert.json  meson.build
data/: dev.itsjamie9494.Albania.appdata.xml.in  dev.itsjamie9494.Albania.desktop.in  dev.itsjamie9494.Albania.gschema.xml  dev.itsjamie9494.AlbanianVirus.appdata.xml.in  dev.itsjamie9494.AlbanianVirus.desktop.in  dev.itsjamie9494.AlbanianVirus.gschema.xml  dev.itsjamie9494.PeterAlert.appdata.xml.in  dev.itsjamie9494.PeterAlert.desktop.in  dev.itsjamie9494.PeterAlert.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  albania.pot  en_CA.po  en_GB.po  meson.build  peter-alert.pot
src/: albania.gresource.xml  albanianvirus.gresource.xml  application.vala  config.vala.in  main.vala  meson.build  peter-alert.gresource.xml  window.ui  window.vala
